integrated python functions with java swing using FAST api